--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "meom/meom-3rd-party-scripts",
-    "version": "1.1.0",
+    "version": "1.1.1",
     "description": "Create settings for 3rd party script like Google Tag Manager and Cookiebot.",
     "type": "wordpress-plugin",
     "license": "GPL-2.0-or-later",
@@ -14,5 +14,10 @@
     "require-dev": {
         "meom/phpcs-composer": "dev-main"
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev",
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
+    }
 }
